# roomz

./: .env  .gitignore  Cargo.toml  README.md  Roadmap.md  diesel.toml
migrations/2024-09-26-205607_create_users_rooms_reservations/: down.sql  up.sql
src/: db.rs  errors.rs  lib.rs  main.rs  schema.rs
src/handlers/: mod.rs  reservations.rs  rooms.rs  users.rs
src/models/: mod.rs  reservation.rs  room.rs  user.rs
